# RunFlow

./: .env.example  .gitignore  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/api/runflow_api/: __init__.py  cli.py  config.py  db.py  deps.py  logging_config.py  main.py  models.py  schemas.py  seed.py  utils.py
apps/api/runflow_api/api/: ai.py  api_keys.py  auth.py  credentials.py  dashboard.py  health.py  hooks.py  inventories.py  jobs.py  mailboxes.py  metrics.py  runs.py  secrets.py  settings.py  triggers.py  workers.py  workers_admin.py  workflows.py
apps/api/runflow_api/core/: authorization.py  condition_evaluator.py  encryption.py  git_webhook.py  parameter_validation.py  result_parser.py  run_state.py  secret_redaction.py  security.py  template_engine.py  webhook_auth.py
apps/api/runflow_api/services/: audit.py  callbacks.py  credentials.py  email_poller.py  git_auth.py  git_preview.py  git_sync.py  http_poller.py  inventories.py  inventory_test.py  job_files.py  logs.py  notifications.py  queue.py  run_events.py  scheduler.py  script_parser.py  secrets.py  triggers.py  valkey.py  worker_health.py  workflow_engine.py
apps/api/runflow_api/services/ai/: gateway.py
apps/api/runflow_api/templates/email/: run_notification.html
apps/api/tests/: test_authorization.py  test_git_auth.py  test_git_jobs.py  test_git_sync.py  test_git_webhook.py  test_inventory_test.py  test_logs.py  test_notifications.py  test_parameter_validation.py  test_path_traversal.py  test_phase2_5.py  test_result_parser.py  test_run_state.py  test_runner_config_schemas.py  test_script_parser.py  test_secret_redaction.py  test_security.py  test_worker_assignment.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/runflow_worker/: __init__.py  agent.py  cli.py  client.py  config.py  debug_log.py  docker_paths.py
apps/worker/runflow_worker/runners/: base.py  docker_executor.py  ssh_tools.py
apps/worker/runflow_worker/services/: job_source.py
apps/worker/tests/: test_docker_paths.py  test_runner_commands.py  test_ssh_tools.py
deploy/: .env.agents.example  build-runners.sh  (+5 more)
(+102 files in other folders)
