[project]
name = "runflow-api"
version = "0.1.0"
description = "RunFlow API server"
requires-python = ">=3.13"
dependencies = [
    "runflow-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "typer>=0.15",
    "httpx>=0.28",
    "redis>=5.2",
    "python-ulid>=3.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.2",
    "jinja2>=3.1",
    "croniter>=5.0",
    "cryptography>=44.0",
]

[project.scripts]
runflow = "runflow_api.cli:app"
runflow-seed = "runflow_api.seed:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runflow_api"]

[tool.uv.sources]
runflow-shared = { workspace = true }
