[project]
name = "runflow-worker"
version = "0.1.0"
description = "RunFlow execution worker"
requires-python = ">=3.13"
dependencies = [
    "runflow-shared",
    "httpx>=0.28",
    "typer>=0.15",
    "pydantic-settings>=2.6",
    "docker>=7.1",
    "python-ulid>=3.0",
]

[project.scripts]
runflow-worker = "runflow_worker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runflow_worker"]

[tool.uv.sources]
runflow-shared = { workspace = true }
